Implemented registeration and login functionally but some bugs in login in need to figure out where it goes wrong

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,7 +30,10 @@
                             <li class="nav-item"><a class="nav-link" href="/inventory">Inventory</a></li>   
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/logout">Profile</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
+                        </ul>
+                        <ul class="navbar-nav ms-auto mt-2">
+                            <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
                         </ul>
                     {% else %}
                         <ul class="navbar-nav ms-auto mt-2">
