--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -40,8 +40,15 @@ body {
     cursor: pointer;
   }
 
-#option-btn {
-    background-color: inherit;
-    border: none;
-  }
+#profile-pic {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    cursor: pointer; 
+}
+
+.display-name {
+    font-weight: bold;
+    margin-right: auto;
+}
   
