Added an inventory table to the schema.

--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -2,6 +2,28 @@
 
 {% block title %} inventory {% endblock %}
 
+{% block link %} 
+    <link href="{{ url_for('static', filename='css/inventory.css')}}" rel="stylesheet">
+{% endblock %}
+
 {% block main %}
-    This is the inventory page
+    <div class="item-container mb-3">
+        <div class="smth mb-3">
+            <select>
+                <option>Select something</option>
+            </select>
+        </div>
+        <div class="middle mb-3">
+            <div class="middle middle-image mb-3">
+                <img src="{{ url_for('static', filename='profile-pics/default.png')}}" alt="placeholder">
+            </div>
+            <div class="middle middle-info mb-3">
+                <p>Info</p>
+                <p>Info</p>
+            </div>
+            
+        </div>
+        <div class="smth mb-3">
+        </div>
+    </div>
 {% endblock %}
