--- a/static/css/inventory.css
+++ b/static/css/inventory.css
@@ -1,31 +1,17 @@
 .item-container {
-    width: 80%;
+    width: 60%;
     font-family: Arial, sans-serif;
     margin: 0 auto;
     padding: 0;
-    border: 2px solid blue;
     background-color: #f4f4f4;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border: 2px solid blue;
 }
 
-.class-container {
+.category-container {
     width: 50%;
-    margin: 0 auto;
-    border: 2px solid red;
-    background-color: #f4f4f4;
-}
-
-.image-container {
-    width: 50%;
-    border: 2px solid green;
-    background-color: #f4f4f4;
-}
-
-.smth {
-    width: 50%;
-    border: 2px solid green;
     background-color: #f4f4f4;
     margin: 0 auto;
     display: flex;
@@ -33,33 +19,73 @@
     align-items: center;
 }
 
-.smth img {
-    width: 50%;
-    border: 2px solid green;
-    background-color: #f4f4f4;
-    margin-right: auto;
-}
-
-.middle {
-    width: 50%;
-    border: 2px solid green;
+.item-info {
+    width: 70%;
     background-color: #f4f4f4;
     margin: 0 auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
     display: flex;
     flex-direction: row;
 }
 
-.middle-info {
+.item-info-image {
+    flex: 0 0 50%;
+    background-color: #f4f4f4;
+    margin-right: 4%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid red;
+}
+
+.item-info-image img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+.image-upload, .image-slide {
+    flex: 0 0 5%;
+    margin-right: 4%;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.image-upload button {
+    margin-bottom: 10px;
+}
+
+.image-upload button, .image-slide button {
+    width: 40px;
+    height: 40px;
+    font-size: 24px;
+}
+
+.item-info-text {
     width: 50%;
-    border: 2px solid green;
+    background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+}
+
+.item-info-text input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+.item-description {
+    width: 60%;
     background-color: #f4f4f4;
     margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    display: flex;
-    flex-direction: column;
 }
+
+
+
