--- a/static/css/inventory.css
+++ b/static/css/inventory.css
@@ -7,7 +7,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 2px solid blue;
 }
 
 .category-container {
@@ -37,12 +36,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid red;
+    width: 300px;
+    height: 150px;
 }
 
 .item-info-image img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 90%;
+    max-height: 90%;
     object-fit: contain;
 }
 
@@ -87,5 +87,14 @@
     align-items: center;
 }
 
+.options-container {
+    width: 50%;
+    background-color: #f4f4f4;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
 
 
