--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -7,61 +7,62 @@
 {% endblock %}
 
 {% block main %}
-    {% if inventory %}
-        {% for item in inventory %}
-            <form id="inventory-form-{{ forloop.counter }}" action="/inventory/add" method="POST" data-db-item-id={{ item.item_id }}>
+
+        {% for item, item_id in inventory %}
+            {% set directory = "inventory-pics/user-" ~ session['user_id'] ~ "/" %}
+            <form id="inventory-form-{{ loop.index }}" action="/inventory/add" method="POST" data-image-filenames="{{ item.image_filenames | map('prefix', directory) | join('/') }}" enctype="multipart/form-data">
                 <div class="item-container mb-3">
                     <div class="category-container mb-3">
-                        <select class="form-control mx-auto w-auto" id="categories-{{ forloop.counter }}" name="categories-{{ forloop.counter }}" required disabled>
-                            <option value="" disabled selected>Select item category</option>
+                        <select class="form-control mx-auto w-auto" id="categories-{{ loop.index }}" name="categories-{{ loop.index }}" required disabled>
+                            <option value="{{ item.category }}" disabled selected>{{ item.category }}</option>
                             {% for filename in filenames %}
-                                <option value={{ filename }}>{{ filename }}</option>
+                                <option value="{{ filename }}">{{ filename }}</option>
                             {% endfor %}
                         </select>
                     </div>
                     <div class="item-info mb-3">
                         <div class="image-upload mb-3">
-                            <button type="button" id="upload-button-{{ forloop.counter }}" class="btn btn-primary" disabled>+</button>
-                            <button type="button" id="remove-button-{{ forloop.counter }}" class="btn btn-primary" disabled>-</button>
+                            <button type="button" id="upload-button-{{ loop.index }}" class="btn btn-primary" disabled>+</button>
+                            <button type="button" id="remove-button-{{ loop.index }}" class="btn btn-primary" disabled>-</button>
                         </div>
 
                         <div class="image-slide">
-                            <button type="button" id="left-arrow-{{ forloop.counter }}" class="btn btn-secondary">&lt;</button>
+                            <button type="button" id="left-arrow-{{ loop.index }}" class="btn btn-secondary">&lt;</button>
                         </div>
 
                         <div class="item-info-image mb-3">
-                            {% if item.images %}
-                                <img id="item-image-preview-{{ forloop.counter }}" src="{{ url_for('static', filename=item.images[0]) }}" alt="placeholder" style="margin-top: 10px;">
+                            {% if item.image_filenames %}
+                                {% set filename = "inventory-pics/user-" ~ session['user_id'] ~ "/" ~ item.image_filenames[0] %}
+                                <img id="item-image-preview-{{ loop.index }}" src="{{ url_for('static', filename=filename) }}" alt="placeholder1" style="margin-top: 10px;">
                             {% else %}
-                                <img id="item-image-preview-{{ forloop.counter }}" src="{{ url_for('static', filename='inventory-pics/default/no-image.png') }}" alt="placeholder" style="margin-top: 10px;">
+                                <img id="item-image-preview-{{ loop.index }}" src="{{ url_for('static', filename='inventory-pics/default/no-image.png') }}" alt="placeholder2" style="margin-top: 10px;">
                             {% endif %}
-                            <input type="file" id="item-image-{{ forloop.counter }}" name="item-image-{{ forloop.counter }}" accept="image/*" style="display: none;" multiple  disabled>
+                            <input type="file" id="item-image-{{ loop.index }}" name="item-image-{{ loop.index }}" accept="image/*" style="display: none;" multiple  disabled>
                         </div>
 
                         <div class="image-slide">
-                            <button type="button" id="right-arrow-{{ forloop.counter }}" class="btn btn-secondary" disabled>&gt;</button>
+                            <button type="button" id="right-arrow-{{ loop.index }}" class="btn btn-secondary">&gt;</button>
                         </div>
                         
                         <div class="item-info-text mb-3">
-                            <input class="form-control mx-auto w-auto" type="text" required id="item-name-{{ forloop.counter }}" name="item-name-{{ forloop.counter }}" placeholder disabled="Item name">
-                            <input class="form-control mx-auto w-auto" type="text" required id="item-price-{{ forloop.counter }}" name="item-price-{{ forloop.counter }}" placeholder disabled="Item price">
-                            <input class="form-control mx-auto w-auto" type="number" required id="item-quantity-{{ forloop.counter }}" name="item-quantity-{{ forloop.counter }}" placeholder disabled="Item quantity">
+                            <input class="form-control mx-auto w-auto" type="text" required id="item-name-{{ loop.index }}" name="item-name-{{ loop.index }}" disabled placeholder="Item name" value="{{ item.name }}">
+                            <input class="form-control mx-auto w-auto" type="text" required id="item-price-{{ loop.index }}" name="item-price-{{ loop.index }}" disabled placeholder="Item price" value="{{ item.price }}">
+                            <input class="form-control mx-auto w-auto" type="number" required id="item-quantity-{{ loop.index }}" name="item-quantity-{{ loop.index }}" disabled placeholder="Item quantity" value="{{ item.quantity }}">
                         </div>    
                     </div>
                     <div class="item-description mb-3">
-                        <label for="item-description-{{ forloop.counter }}">Description:</label>
-                        <textarea class="form-control mx-auto w-auto" id="item-description-{{ forloop.counter }}" name="item-description-{{ forloop.counter }}" rows="2" cols="50" disabled></textarea>
+                        <label for="item-description-{{ loop.index }}">Description:</label>
+                        <textarea class="form-control mx-auto w-auto" id="item-description-{{ loop.index }}" name="item-description-{{ loop.index }}" rows="2" cols="50" disabled>{{ item.description }}</textarea>
                     </div>
                     <div class="options-container mb-3">
-                        <button id="edit-{{ forloop.counter }}" name="edit-{{ forloop.counter }}" type="button" class="btn btn-primary">Edit</button>
-                        <button id="delete-{{ forloop.counter }}" name="delete-{{ forloop.counter }}" type="button" class="btn btn-danger">Delete</button>
-                        <button id="save-{{ forloop.counter }}" name="save-{{ forloop.counter }}" type="button" class="btn btn-success" style="display: none;">Save</button>
-                        <button id="cancel-{{ forloop.counter }}" name="cancel-{{ forloop.counter }}" type="button" class="btn btn-secondary" style="display: none;">Cancel</button>
+                        <button id="edit-{{ loop.index }}" name="edit-{{ loop.index }}" type="button" class="btn btn-primary">Edit</button>
+                        <button id="delete-{{ loop.index }}" name="delete-{{ loop.index }}" type="button" class="btn btn-danger">Delete</button>
+                        <button id="save-{{ loop.index }}" name="save-{{ loop.index }}" type="button" class="btn btn-success" style="display: none;">Save</button>
+                        <button id="cancel-{{ loop.index }}" name="cancel-{{ loop.index }}" type="button" class="btn btn-secondary" style="display: none;">Cancel</button>
                     </div>
                 </div>
             </form>
-        {% endfor %}
-    {% else %}
+        {% else %}
             <p>Add your first item</p>
 
             <form id="inventory-form-0" action="/inventory/add" method="POST" enctype="multipart/form-data">
@@ -108,7 +109,7 @@
                     </div>
                 </div>
             </form>
-    {% endif %}
+        {% endfor %}
 {% endblock %}
 
 {% block script %}
