--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,6 +40,7 @@
                 </div>
             </div>
         </nav>
+        {% block add %}{% endblock %}
         
         {% if session["user_id"] %}
             <div class="sidebar" id="sidebar">
@@ -56,7 +57,7 @@
             </div>
         {% endif %}
 
-        <main>
+        <main id="main">
             {% block main %}{% endblock %}
         </main>
 
