--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -9,8 +9,7 @@
 {% block add %}
     {% if not isEmpty %}
         <div class="mb-3" align="center">
-            <p>Add a new item</p>
-            <button type="button" id="add-item" class="btn btn-primary">Add item</button>
+            <button type="button" id="add-item" class="fab">Add a new item</button>
         </div>
     {% endif %}
 {% endblock %}
